Project

General

Profile

Actions

Bug #58971

open

Ceph - Bug #58975: mon: do not erroneously propose on error in ::prepare_update

mon/MDSMonitor: do not trigger propose on error from prepare_update

Added by Patrick Donnelly about 1 year ago. Updated 11 months ago.

Status:
Pending Backport
Priority:
High
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
backport_processed
Backport:
reef,quincy,pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDSMonitor
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):


Related issues 3 (0 open3 closed)

Copied to CephFS - Backport #61413: reef: mon/MDSMonitor: do not trigger propose on error from prepare_updateResolvedPatrick DonnellyActions
Copied to CephFS - Backport #61414: pacific: mon/MDSMonitor: do not trigger propose on error from prepare_updateResolvedPatrick DonnellyActions
Copied to CephFS - Backport #61415: quincy: mon/MDSMonitor: do not trigger propose on error from prepare_updateResolvedPatrick DonnellyActions
Actions #1

Updated by Patrick Donnelly about 1 year ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 50501
Actions #2

Updated by Patrick Donnelly about 1 year ago

  • Subject changed from MDSMonitor: do not trigger propose on error from prepare_update to MDSmon/Monitor: do not trigger propose on error from prepare_update
  • Parent task set to #58975
Actions #3

Updated by Patrick Donnelly about 1 year ago

  • Subject changed from MDSmon/Monitor: do not trigger propose on error from prepare_update to mon/MDSMonitor: do not trigger propose on error from prepare_update
Actions #4

Updated by Patrick Donnelly 11 months ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Backport Bot 11 months ago

  • Copied to Backport #61413: reef: mon/MDSMonitor: do not trigger propose on error from prepare_update added
Actions #6

Updated by Backport Bot 11 months ago

  • Copied to Backport #61414: pacific: mon/MDSMonitor: do not trigger propose on error from prepare_update added
Actions #7

Updated by Backport Bot 11 months ago

  • Copied to Backport #61415: quincy: mon/MDSMonitor: do not trigger propose on error from prepare_update added
Actions #8

Updated by Backport Bot 11 months ago

  • Tags set to backport_processed
Actions

Also available in: Atom PDF