mon/MDSMonitor: do not propose on error in prepare_update

There is nothing to propose in pending map when an error is encountered.

Fixes: https://tracker.ceph.com/issues/58971
Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>